@@ -1,4 +1,9 @@
-2002-01-17 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+2003-01-17 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* generalslab.h: Constructors for series solver.
+	* generalslab.cpp: Ditto.
+
+2003-01-17 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* generalslab.h: Make disc_intersect const.
 	* generalslab.cpp: Ditto.
